Updates test index page
library path.

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../node_modules/chai/chai.js"></script>
 
-  <script src="../build/js/libs/three.min.js"></script>
+  <script src="../build/lib/js/three.min.js"></script>
   <script src="../build/js/prkr.bundle.js"></script>
 
   <script>mocha.setup('bdd')</script>
