Adds basic (wip) login logout buttons and integrate auth0 js library
some code directly from samples. first draft.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
   
   <script src="lib/js/lodash.min.js"></script>
   <script src="lib/js/jquery.min.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
 
 </head>
 <body>
@@ -18,6 +19,8 @@
     <h1>Parcour</h1>
     <div class="right">
       <button id="build-button" class="big"><i class="fa fa-paint-brush"></i> CREATE</button>
+      <button id="login-button" class="big"><i class="fa fa-key"></i> LOGIN</button>
+      <button id="logout-button" class="big"><i class="fa fa-logout"></i> LOGOUT</button>
     </div>
   </header>
   <main>
@@ -37,6 +40,123 @@
 
   <script>
 "use strict";
+
+// AUTHENTICATION (Auth0 style)
+
+window.addEventListener('load', function() {
+
+  var webAuth = new auth0.WebAuth({
+    domain: 'parcour.auth0.com',
+    clientID: 'fP5Y99HWVWFpswkuhSGO4aQ1af4WleVG',
+    responseType: 'token id_token',
+    scope: 'openid profile',
+    redirectUri: window.location.href
+  });
+
+  var loginBtn = document.getElementById('login-button');
+
+  loginBtn.addEventListener('click', function(e) {
+    e.preventDefault();
+    webAuth.authorize();
+  });
+
+  // var loginStatus = document.getElementById('login-status');
+  var loginView = document.getElementById('login-view');
+  var homeView = document.getElementById('home-view');
+
+  // buttons and event listeners
+  // var homeViewBtn = document.getElementById('btn-home-view');
+  var logoutBtn = document.getElementById('logout-button');
+
+  // homeViewBtn.addEventListener('click', function() {
+  //   homeView.style.display = 'inline-block';
+  //   loginView.style.display = 'none';
+  // });
+
+  logoutBtn.addEventListener('click', logout);
+
+  function handleAuthentication() {
+    webAuth.parseHash(function(err, authResult) {
+      if (authResult && authResult.accessToken && authResult.idToken) {
+        window.location.hash = '';
+        setSession(authResult);
+        loginBtn.style.display = 'none';
+        // homeView.style.display = 'inline-block';
+        webAuth.client.userInfo(authResult.accessToken, function(err, user) {
+          if (err) {
+            console.error('Error while fetching user info', err);
+          } else if (user) {
+            console.log('user info', user);
+            localStorage.setItem('user_info', JSON.stringify(user));
+          }
+        });
+      } else if (err) {
+        // homeView.style.display = 'inline-block';
+        console.log(err);
+        alert(
+          'Error: ' + err.error + '. Check the console for further details.'
+        );
+      }
+      displayButtons();
+    });
+  }
+
+  function setSession(authResult) {
+    // Set the time that the Access Token will expire at
+    var expiresAt = JSON.stringify(
+      authResult.expiresIn * 1000 + new Date().getTime()
+    );
+    localStorage.setItem('access_token', authResult.accessToken);
+    localStorage.setItem('id_token', authResult.idToken);
+    localStorage.setItem('expires_at', expiresAt);
+
+    // validate back-end communication.
+    $.ajax({
+      "async": true,
+      "crossDomain": true,
+      "url": "http://localhost:3000/api/v1/users/whoami",
+      "method": "GET",
+      "headers": {
+        "authorization": "Bearer " + authResult.accessToken
+      }
+    }  ).done(function (response) {
+      console.log(response);
+    });
+
+  }
+
+  function logout() {
+    // Remove tokens and expiry time from localStorage
+    localStorage.removeItem('access_token');
+    localStorage.removeItem('id_token');
+    localStorage.removeItem('expires_at');
+    localStorage.removeItem('user_info');
+    displayButtons();
+  }
+
+  function isAuthenticated() {
+    // Check whether the current time is past the
+    // Access Token's expiry time
+    var expiresAt = JSON.parse(localStorage.getItem('expires_at'));
+    return new Date().getTime() < expiresAt;
+  }
+
+  function displayButtons() {
+    if (isAuthenticated()) {
+      loginBtn.style.display = 'none';
+      logoutBtn.style.display = 'inline-block';
+      // loginStatus.innerHTML = 'You are logged in!';
+    } else {
+      loginBtn.style.display = 'inline-block';
+      logoutBtn.style.display = 'none';
+      // loginStatus.innerHTML =
+      //   'You are not logged in! Please log in to continue.';
+    }
+  }
+
+  handleAuthentication();
+
+});
 
 // Fetch configuration
 var config = null;
