--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,6 +47,7 @@ window.addEventListener('load', function() {
 
   var webAuth = new auth0.WebAuth({
     domain: 'parcour.auth0.com',
+    audience: 'http://localhost:8080',
     clientID: 'fP5Y99HWVWFpswkuhSGO4aQ1af4WleVG',
     responseType: 'token id_token',
     scope: 'openid profile',
@@ -76,20 +77,21 @@ window.addEventListener('load', function() {
   logoutBtn.addEventListener('click', logout);
 
   function handleAuthentication() {
+
     webAuth.parseHash(function(err, authResult) {
       if (authResult && authResult.accessToken && authResult.idToken) {
         window.location.hash = '';
         setSession(authResult);
         loginBtn.style.display = 'none';
         // homeView.style.display = 'inline-block';
-        webAuth.client.userInfo(authResult.accessToken, function(err, user) {
-          if (err) {
-            console.error('Error while fetching user info', err);
-          } else if (user) {
-            console.log('user info', user);
-            localStorage.setItem('user_info', JSON.stringify(user));
-          }
-        });
+        // webAuth.client.userInfo(authResult.accessToken, function(err, user) {
+        //   if (err) {
+        //     console.error('Error while fetching user info', err);
+        //   } else if (user) {
+        //     console.log('user info', user);
+        //     localStorage.setItem('user_info', JSON.stringify(user));
+        //   }
+        // });
       } else if (err) {
         // homeView.style.display = 'inline-block';
         console.log(err);
@@ -97,8 +99,10 @@ window.addEventListener('load', function() {
           'Error: ' + err.error + '. Check the console for further details.'
         );
       }
+      whoAmI();
       displayButtons();
     });
+
   }
 
   function setSession(authResult) {
@@ -110,19 +114,41 @@ window.addEventListener('load', function() {
     localStorage.setItem('id_token', authResult.idToken);
     localStorage.setItem('expires_at', expiresAt);
 
-    // validate back-end communication.
-    $.ajax({
-      "async": true,
-      "crossDomain": true,
-      "url": "http://localhost:3000/api/v1/users/whoami",
-      "method": "GET",
-      "headers": {
-        "authorization": "Bearer " + authResult.accessToken
-      }
-    }  ).done(function (response) {
-      console.log(response);
-    });
+    // // validate back-end communication.
+    // $.ajax({
+    //   "async": true,
+    //   "crossDomain": true,
+    //   "url": "http://localhost:3000/api/v1/users/whoami",
+    //   "method": "GET",
+    //   "headers": {
+    //     "authorization": "Bearer " + authResult.accessToken
+    //   }
+    // }  ).done(function (response) {
+    //   console.log(response);
+    // });
 
+  }
+
+  function whoAmI(accessToken) {
+    var accessToken = localStorage.getItem('access_token');
+    if (accessToken) {
+      // validate back-end authentication.
+      $.ajax({
+        async: true,
+        crossDomain: true,
+        url: 'http://localhost:3000/api/v1/users/whoami',
+        method: 'GET',
+        headers: {
+          authorization: 'Bearer ' + accessToken
+        }
+      }).done(function (response) {
+        console.log(response);
+        localStorage.setItem('parcour_user', JSON.stringify(response.user));
+      }).fail(function(jqXHR, textStatus, errorThrown) {
+        console.error(errorThrown);
+        localStorage.removeItem('parcour_user');
+      });
+    }
   }
 
   function logout() {
@@ -130,6 +156,7 @@ window.addEventListener('load', function() {
     localStorage.removeItem('access_token');
     localStorage.removeItem('id_token');
     localStorage.removeItem('expires_at');
+    localStorage.removeItem('parcour_user');
     localStorage.removeItem('user_info');
     displayButtons();
   }
@@ -194,18 +221,24 @@ function fetchParcours() {
 }
 
 function parcourList(parcours) {
+
+  let user = JSON.parse(localStorage.getItem('parcour_user'));
+  let userId = user && user.id;
+
   var root = $('<div class="prkr-list" />');
   parcours.forEach(p => {
+    var byCurrentUser = userId === p.userId;
     var lastUpdate = new Date(p.updatedOn).toLocaleString();
     var formattedId = p.id.substr(0, 4) + '&hellip;' + p.id.substr(p.id.length - 5);
-    var elem = $(`<div id="${p.id}" class="prkr-list-item">
-      <div class="prkr-item-actions right">
+    var elem = $(`<div id="${ p.id }" class="prkr-list-item">` +
+      (byCurrentUser ? `<div class="prkr-item-actions right">
         <span class="action edit-action"><i class="fa fa-edit"></i></span>
         <span class="action delete-action"><i class="fa fa-minus-circle"></i></span>
-      </div>
-      <div class="prkr-item-name">${p.name}</div>
-      <div class="prkr-item-lastupdate">${lastUpdate}</div>
-      <div class="prkr-item-id">${formattedId}</div>
+      </div>` : '') +
+      `<div class="prkr-item-name">${ p.name }</div>
+      <div class="prkr-item-lastupdate">${ lastUpdate }</div>
+      <div class="prkr-item-id">${ formattedId }</div>
+      <div class="prkr-item-user">by <span class="bold">${ byCurrentUser ? 'You' : p.userNickname }</span></div>
     </div>`);
     elem.on('click', e => playParcour(e, p.id));
     elem.find('.edit-action').on('click', e => editParcour(e, p.id));
