--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="fonts/roboto/css/roboto/roboto-fontface.css">
 
   <link rel="stylesheet" href="lib/fa/css/font-awesome.min.css">
-  
+
   <script src="lib/js/lodash.min.js"></script>
   <script src="lib/js/jquery.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
@@ -41,11 +41,9 @@
   <script>
 "use strict";
 
-// AUTHENTICATION (Auth0 style)
+$(function() {
 
-window.addEventListener('load', function() {
-
-  var webAuth = new auth0.WebAuth({
+  const webAuth = new auth0.WebAuth({
     domain: 'parcour.auth0.com',
     audience: 'http://localhost:8080',
     clientID: 'fP5Y99HWVWFpswkuhSGO4aQ1af4WleVG',
@@ -54,85 +52,137 @@ window.addEventListener('load', function() {
     redirectUri: window.location.href
   });
 
-  var loginBtn = document.getElementById('login-button');
+  var config = null;
+  var parcours = [];
 
-  loginBtn.addEventListener('click', function(e) {
+  const $loginButton = $('#login-button');
+  const $logoutButton = $('#logout-button');
+
+  $loginButton.on('click', e => login(e));
+  $logoutButton.on('click', e => logout(e));
+
+  $('#build-button').on('click', e => editNewParcour(e));
+
+  init();
+
+  /**
+   * Initializes configuration loading and authentication validation.
+   */
+  function init() {
+    fetchConfiguration();
+    handleAuthentication();
+  }
+
+  function login(e) {
     e.preventDefault();
     webAuth.authorize();
-  });
+  }
 
-  // var loginStatus = document.getElementById('login-status');
-  var loginView = document.getElementById('login-view');
-  var homeView = document.getElementById('home-view');
+  function logout(e) {
+    e.preventDefault();
+    clearSession();
+    updateUi();
+  }
 
-  // buttons and event listeners
-  // var homeViewBtn = document.getElementById('btn-home-view');
-  var logoutBtn = document.getElementById('logout-button');
+  function fetchConfiguration() {
+    $.getJSON('./config.json').then(
+      (data, status, xhr) => {
+        config = data;
+        fetchParcours();
+      },
+      (xhr, status, err) => {
+        var message = 'Unable to fetch configuration.';
+        console.error(message);
+        alert(message);
+      }
+    );
+  }
 
-  // homeViewBtn.addEventListener('click', function() {
-  //   homeView.style.display = 'inline-block';
-  //   loginView.style.display = 'none';
-  // });
-
-  logoutBtn.addEventListener('click', logout);
+  function fetchParcours() {
+    var url = config.backend + config.parcours;
+    $.getJSON(url).then(
+      (data, status, xhr) => {
+        // console.log({ data, status });
+        parcours = data;
+        updateUi();
+      },
+      (xhr, status, err) => {
+        console.error({ data, status, xhr });
+      }
+    );
+  }
 
   function handleAuthentication() {
-
-    webAuth.parseHash(function(err, authResult) {
+    webAuth.parseHash((err, authResult) => {
       if (authResult && authResult.accessToken && authResult.idToken) {
         window.location.hash = '';
         setSession(authResult);
-        loginBtn.style.display = 'none';
-        // homeView.style.display = 'inline-block';
-        // webAuth.client.userInfo(authResult.accessToken, function(err, user) {
-        //   if (err) {
-        //     console.error('Error while fetching user info', err);
-        //   } else if (user) {
-        //     console.log('user info', user);
-        //     localStorage.setItem('user_info', JSON.stringify(user));
-        //   }
-        // });
       } else if (err) {
-        // homeView.style.display = 'inline-block';
         console.log(err);
         alert(
           'Error: ' + err.error + '. Check the console for further details.'
         );
       }
       whoAmI();
-      displayButtons();
+      updateUi();
     });
-
   }
 
+  /**
+   * Sets user session info in the local storage.
+   * @param authResult Authentication result. If null or undefined or if it doesn't contain `accessToken` and
+   * `idToken` properties the local storage is cleared, else the auth info is stored.
+   */
   function setSession(authResult) {
-    // Set the time that the Access Token will expire at
+    if (!authResult || !authResult.accessToken || !authResult.idToken) {
+      return clearSession();
+    }
     var expiresAt = JSON.stringify(
       authResult.expiresIn * 1000 + new Date().getTime()
     );
     localStorage.setItem('access_token', authResult.accessToken);
     localStorage.setItem('id_token', authResult.idToken);
     localStorage.setItem('expires_at', expiresAt);
-
-    // // validate back-end communication.
-    // $.ajax({
-    //   "async": true,
-    //   "crossDomain": true,
-    //   "url": "http://localhost:3000/api/v1/users/whoami",
-    //   "method": "GET",
-    //   "headers": {
-    //     "authorization": "Bearer " + authResult.accessToken
-    //   }
-    // }  ).done(function (response) {
-    //   console.log(response);
-    // });
-
   }
 
+  function clearSession() {
+    localStorage.removeItem('access_token');
+    localStorage.removeItem('id_token');
+    localStorage.removeItem('expires_at');
+    localStorage.removeItem('parcour_user');
+  }
+
+  /** Checks if there is current valid session. */
+  function isAuthenticated() {
+    var accessToken = getAccessToken();
+    if (!accessToken) return false;
+
+    var expiresAt = JSON.parse(localStorage.getItem('expires_at'));
+    if (!expiresAt) return false;
+
+    return new Date().getTime() < expiresAt;
+  }
+
+  /** Gets the current user acces token or null. */
+  function getAccessToken() {
+    return localStorage.getItem('access_token');
+  }
+
+  function setParcourUser(parcourUser) {
+    localStorage.setItem('parcour_user', JSON.stringify(parcourUser));
+  }
+
+  function getParcourUser() {
+    return JSON.parse(localStorage.getItem('parcour_user'));
+  }
+
+  /**
+   * Fectches current user info from the back-end.
+   */
   function whoAmI(accessToken) {
-    var accessToken = localStorage.getItem('access_token');
+    var accessToken = getAccessToken();
     if (accessToken) {
-      // validate back-end authentication.
+      // Gets current user identity from the back-end.
       $.ajax({
         async: true,
         crossDomain: true,
@@ -142,145 +192,97 @@ window.addEventListener('load', function() {
           authorization: 'Bearer ' + accessToken
         }
       }).done(function (response) {
-        console.log(response);
-        localStorage.setItem('parcour_user', JSON.stringify(response.user));
+        setParcourUser(response.user);
+        updateUi();
       }).fail(function(jqXHR, textStatus, errorThrown) {
         console.error(errorThrown);
-        localStorage.removeItem('parcour_user');
       });
     }
   }
 
-  function logout() {
-    // Remove tokens and expiry time from localStorage
-    localStorage.removeItem('access_token');
-    localStorage.removeItem('id_token');
-    localStorage.removeItem('expires_at');
-    localStorage.removeItem('parcour_user');
-    localStorage.removeItem('user_info');
-    displayButtons();
-  }
-
-  function isAuthenticated() {
-    // Check whether the current time is past the
-    // Access Token's expiry time
-    var expiresAt = JSON.parse(localStorage.getItem('expires_at'));
-    return new Date().getTime() < expiresAt;
-  }
-
-  function displayButtons() {
+  function updateUi() {
     if (isAuthenticated()) {
-      loginBtn.style.display = 'none';
-      logoutBtn.style.display = 'inline-block';
-      // loginStatus.innerHTML = 'You are logged in!';
+      $loginButton.addClass('hidden');
+      $logoutButton.removeClass('hidden');
+      // TODO add username.
     } else {
-      loginBtn.style.display = 'inline-block';
-      logoutBtn.style.display = 'none';
-      // loginStatus.innerHTML =
-      //   'You are not logged in! Please log in to continue.';
+      $logoutButton.addClass('hidden');
+      $loginButton.removeClass('hidden');
+      // TODO hide username.
     }
+    // rebuilds the parcour list...
+    $('#prkr-list-area').empty().append(buildParcourList(parcours));
   }
 
-  handleAuthentication();
+  function buildParcourList(parcours) {
 
-});
+    let user = getParcourUser();
+    let userId = user && user.id;
 
-// Fetch configuration
-var config = null;
-fetchConfiguration();
-
-$('#build-button').on('click', e => {
-  window.location.assign('./editor.html');
-});
-
-function fetchConfiguration() {
-  $.getJSON('./config.json').then(
-    (data, status, xhr) => {
-      config = data;
-      fetchParcours();
-    },
-    (xhr, status, err) => {
-      var message = 'Unable to fetch configuration.';
-      console.error(message);
-      alert(message);
-    }
-  );
-}
-
-function fetchParcours() {
-  var url = config.backend + config.parcours;
-  $.getJSON(url).then(
-    (data, status, xhr) => {
-      console.log({ data, status });
-      $('#prkr-list-area').append(parcourList(data));
-    },
-    (xhr, status, err) => {
-      console.error({ data, status, xhr });
-    }
-  );
-}
-
-function parcourList(parcours) {
-
-  let user = JSON.parse(localStorage.getItem('parcour_user'));
-  let userId = user && user.id;
-
-  var root = $('<div class="prkr-list" />');
-  parcours.forEach(p => {
-    var byCurrentUser = userId === p.userId;
-    var lastUpdate = new Date(p.updatedOn).toLocaleString();
-    var formattedId = p.id.substr(0, 4) + '&hellip;' + p.id.substr(p.id.length - 5);
-    var elem = $(`<div id="${ p.id }" class="prkr-list-item">` +
-      (byCurrentUser ? `<div class="prkr-item-actions right">
-        <span class="action edit-action"><i class="fa fa-edit"></i></span>
-        <span class="action delete-action"><i class="fa fa-minus-circle"></i></span>
-      </div>` : '') +
-      `<div class="prkr-item-name">${ p.name }</div>
-      <div class="prkr-item-lastupdate">${ lastUpdate }</div>
-      <div class="prkr-item-id">${ formattedId }</div>
-      <div class="prkr-item-user">by <span class="bold">${ byCurrentUser ? 'You' : p.userNickname }</span></div>
-    </div>`);
-    elem.on('click', e => playParcour(e, p.id));
-    elem.find('.edit-action').on('click', e => editParcour(e, p.id));
-    elem.find('.delete-action').on('click', e => deleteParcour(e, p.id));
-    root.append(elem);
-  });
-  return root;
-}
-
-function playParcour(event, id) {
-  event.preventDefault();  
-  window.open('./player.html?id=' + id);
-  return false;
-}
-
-function editParcour(event, id) {
-  event.preventDefault();  
-  window.location.assign('./editor.html?id=' + id);
-  return false;
-}
-
-function deleteParcour(event, id) {  
-  event.preventDefault();  
-  if (confirm(`Are you sure you want to delete the following parcour?\n
-    ID: ${id}`)) {
-    $.ajax({
-      method: 'DELETE',
-      url: config.backend + config.parcours + '/' + id
-    }).then(
-      (data, status, xhr) => {
-        console.info('Parcour deleted.');
-        console.info(data);
-        $('#' + id).remove();
-      },
-      (xhr, status, err) => {
-        console.error('Error deleting parcour.');
-        console.error(data);
-      }
-    );
+    var root = $('<div class="prkr-list" />');
+    parcours.forEach(p => {
+      var byCurrentUser = userId === p.userId;
+      var lastUpdate = new Date(p.updatedOn).toLocaleString();
+      var formattedId = p.id.substr(0, 4) + '&hellip;' + p.id.substr(p.id.length - 5);
+      var elem = $(`<div id="${ p.id }" class="prkr-list-item">` +
+        (byCurrentUser ? `<div class="prkr-item-actions right">
+          <span class="action edit-action"><i class="fa fa-edit"></i></span>
+          <span class="action delete-action"><i class="fa fa-minus-circle"></i></span>
+        </div>` : '') +
+        `<div class="prkr-item-name">${ p.name }</div>
+        <div class="prkr-item-lastupdate">${ lastUpdate }</div>
+        <div class="prkr-item-id">${ formattedId }</div>
+        <div class="prkr-item-user">by ${ byCurrentUser ? 'you' : '<span class="bold">' + p.userNickname + '</span>' }</div>
+      </div>`);
+      elem.on('click', e => playParcour(e, p.id));
+      elem.find('.edit-action').on('click', e => editParcour(e, p.id));
+      elem.find('.delete-action').on('click', e => deleteParcour(e, p.id));
+      root.append(elem);
+    });
+    return root;
   }
-  return false;
-}
+
+  function playParcour(event, id) {
+    event.preventDefault();
+    window.open('./player.html?id=' + id);
+    return false;
+  }
+
+  function editNewParcour(event)  {
+    event.preventDefault();
+    window.location.assign('./editor.html');
+    return false;
+  }
+
+  function editParcour(event, id) {
+    event.preventDefault();
+    window.location.assign('./editor.html?id=' + id);
+    return false;
+  }
+
+  function deleteParcour(event, id) {
+    event.preventDefault();
+    if (confirm(`Are you sure you want to delete the following parcour?\n
+      ID: ${id}`)) {
+      $.ajax({
+        method: 'DELETE',
+        url: config.backend + config.parcours + '/' + id
+      }).then(
+        (data, status, xhr) => {
+          console.info('Parcour deleted.');
+          console.info(data);
+          $('#' + id).remove();
+        },
+        (xhr, status, err) => {
+          console.error('Error deleting parcour.');
+          console.error(data);
+        }
+      );
+    }
+    return false;
+  }
+
+});
 
   </script>
 </body>
